# terminallm

./: .env.example  .gitignore  README.md  helpers.md  main.py  pyproject.toml  run.py
.github/workflow/: ci-cd.yml
examples/: LITELLM_GUIDE.md  litellm_tool_call.py  test_ollama.py  test_tool_caliing.py  tools_schema.json
lib/: agent.py  base_types.py  utils.py
lib/client/: __init__.py  client.py  content_generator.py  llmclient.py  session.py
lib/configs/: __init__.py  extra_conf.py  log_conf.py  main.py  provider_conf.py  tools_config.py
lib/event_sys/: types.py
lib/event_system/: __init__.py  event_collector.py  event_transformer.py  manager.py
lib/startup_ops/: __init__.py  operations.py
lib/system_msg/: __init__.py  _messages.py  message_builder.py
lib/tools/: __init__.py  base.py  directory_tools.py  edit_file.py  executor.py  git_tool.py  glob_tool.py  grep_tool.py  list_directory.py  memory.py  read_file.py  read_multiple_file.py  registry.py  shell_execute.py  shell_tools.py  write_file.py
lib/utils/: common.py  git_utils.py
src/: __init__.py  agent.py  config.py  console.py  event_system.py  llm_client.py  utils.py
src/client/: _prompt.py  client.py  content_generator.py  session.py
src/event_sys/: __init__.py  manager.py  types.py
src/eventing_system/: manager.py  types.py
src/tools/: __init__.py  directory_tools.py  edit_file.py  executor.py  file_tools.py  glob_tool.py  read_file.py  registry.py  shell_tools.py  tool_manager.py  tool_registry.py  write_file.py
terminallm/: __init__.py  app.py  console.py  main.py  setup_loggers.py  utility.py
terminallm/app/: __init__.py  base.py  blog_writer.py  client.py  dev_assisast.py  factory.py  question_answer.py
terminallm/app/db/: database.py
terminallm/app/ios/: audio.py  base.py  console.py  factory.py  utility.py
terminallm/app/system_message/: blog_writer.py  dev_assisast.py
terminallm/app/tools/: functions.py  schema_builder.py
tests/: test_db.py
